# thoth-pre-commit-hook

./: .aicoe-ci.yaml  .pre-commit-hooks.yaml  .thoth.yaml  CHANGELOG.md  OWNERS  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  thoth-advise
thoth/thoth-pre-commit-hook/: __init__.py
thoth/thoth_pre_commit_hook/: __init__.py  thoth-advise  thoth_advise.py
